@@ -1,1 +1,2 @@
+set env(LC_ALL) "C"
 xargs_start 123 {-n1 -IARG sh -c ARG} ftt.xi
