@@ -1,1 +1,2 @@
+set env(LC_ALL) "C"
 xargs_start p {-l1 -n4} files.xi
